--- a/templates/gui/base.html.twig
+++ b/templates/gui/base.html.twig
@@ -20,7 +20,7 @@
     </head>
     <body>
         <main class="main" id="top">
-            <div class="container" data-layout="container">
+            <div class="container-fluid" data-layout="container">
                 <script>
                     var isFluid = JSON.parse(localStorage.getItem('isFluid'));
                     if (isFluid) {
