--- a/templates/tablette/show.html.twig
+++ b/templates/tablette/show.html.twig
@@ -46,7 +46,7 @@
                             </div>
                             <div class="table-responsive scrollbar">
                                 <table class="table overflow-hidden">
-                                    <thead>
+                                    <thead class="bg-200 text-900">
                                         <tr>
                                             <th class="align-middle text-center">#</th>
                                             <th class="align-middle text-center">Nom</th>
