--- a/templates/gui/menuHaut.html.twig
+++ b/templates/gui/menuHaut.html.twig
@@ -6,6 +6,7 @@
     </button>
     <a class="navbar-brand me-1 me-sm-3" href="{{ path('admin.home') }}">
         <div class="d-flex align-items-center">
+            <img class="me-1" src="{{ asset('assets/img/favicons/favicon-removebg.png') }}" alt="" width="40">
             <span class="font-sans-serif">Inventaire</span>
         </div>
     </a>
